--- a/la-casa.njk
+++ b/la-casa.njk
@@ -159,6 +159,7 @@ permalink: "/la-casa/"
       </a>
     </figure>
   </div>
+  <p style="text-align:center;margin-top:.8rem"><a href="/galeria/" class="btn alt">Abrir galería completa</a></p>
 </section>
 
 <!-- Normas -->
@@ -175,7 +176,7 @@ permalink: "/la-casa/"
   </div>
 </section>
 
-<p class="no-print" style="margin-top:1rem">
+<p class="no-print" style="margin-top:2rem">
   <a href="/equipamiento/" class="btn alt">Inventario de equipamiento (interno)</a>
 </p>
 
